--- a/Config/config.env
+++ b/Config/config.env
@@ -11,3 +11,7 @@ MONGO_PASS = 123
 MONGO_USER_ID = agoifinancialservice
 ImakeKitPassword = Aa123456
 ImageKitPrivateKey = private_tnCtvUMQSwLRVw/OJYQXkgJPdGg=
+
+CLOUD_NAME=ashthakur
+API_KEY=359782373625422
+API_SECRET=gZCFXaR6sMCxM_PiVMuvkLpu5yc
